# nextbsd-userland

./: .gitignore  NOTICE.md  README.md  build-userland.sh
.github/workflows/: build-arch.yml  build.yml
ci/: assemble-image.sh
cmake/: cross-amd64.cmake  cross-arm64.cmake
docs/: cross-build-notes.md
src/DiskArbitration/: Makefile  da_iokit_subscribe.c  da_iokit_subscribe.h  datest.c  diskarbitrationd.c  hwreg_subscribe.c  hwreg_subscribe.h
src/IPConfiguration/: Makefile  apply_lease.c  apply_lease.h  apply_lease_v6.c  apply_lease_v6.h  arp_probe.c  arp_probe.h  bound_state.c  bound_state.h  dhcp_discover.c  dhcp_discover.h  dhcp_packet.h  hwreg_subscribe.c  hwreg_subscribe.h  ipconfig.c  ipconfig.defs  ipconfig_mig_types.h  ipconfigd.c  ipconfigd_mig.c  ipconfigrpctest.c  ipconfigtest.c  lease_loop.c  lease_loop.h  mach_service.c  mach_service.h  ra_listen.c  ra_listen.h  sc_link_watch.c  sc_link_watch.h  sc_publish.c  sc_publish.h
src/Libnotify/: Makefile  libnotify.c  notify_internal.h  notify_ipc.defs
src/bootstrap/: libbootstrap.c
src/configd/: Makefile  config.defs  config_link_monitor.c  config_link_monitor.h  config_session.c  config_session.h  config_store.c  config_store.h  config_types.h  config_wire.c  config_wire.h  configd.c  configtest.c  listtest.c  multitest.c  notifytest.c  patterntest.c
src/hostnamed/: Makefile  hostname_observer.c  hostnamed.c  hostnamedbonjourset.c  hostnamedhcpset.c  hostnamedmdnsset.c  hostnameprefset.c  hostnametest.c  prefs_monitor.c
src/kext_tools/: Makefile  Makefile.inc
src/libCoreFoundation/: CFFileUtilities.c  Makefile
src/libIOKit/: IOKitInternal.h  IOKitLib.c  IOKitMatching.c  IOKitNotify.c  Makefile  iokit_notify.h  iokitmatchtest.c  iokitnotifyrt.c  iokitnotifytest.c  iokittest.c  ioreg.c  ioregistry.h
src/libSystemConfiguration/: Makefile  SCBondInterface.c  SCD.c  SCDName.c  (+31 more)
src/nextbsd-installer/: CMakeLists.txt  README.md
src/nextbsd-installer/engine/: do-install.sh  probe-disks.sh
src/nextbsd-installer/src/: app.hpp  engine.cpp  engine.hpp  main.cpp  screen_account.cpp  screen_disk.cpp  screen_finish.cpp  screen_install.cpp  screen_mode.cpp  screens.hpp  theme.hpp
tests/: boot-test.sh  test_bsd_logger.c
(+242 files in other folders)
